[package]
name = "proc_unroll"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leo60228/proc_unroll"
description = "Proc macro to unroll for loops"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.17", features = ["full", "fold"] }
quote = "1.0.3"
proc-macro-error = "1.0.2"
proc-macro2 = "1.0.10"
